Remove add-opens for Java 17 as it is now unnecessary